<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="287dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/cout"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/date"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.198"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="90dp"
            android:layout_height="39dp"
            android:layout_gravity="center"

            app:srcCompat="@drawable/car" />
    </LinearLayout>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="date"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
 />

    <TextView
        android:id="@+id/textViewEssence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_essence"
        android:textSize="20sp"
        android:textStyle="bold"
  />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="17dp"
        tools:layout_editor_absoluteY="137dp">

        <RadioButton
            android:id="@+id/radioButtonDiesel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/diesel" />

        <RadioButton
            android:id="@+id/radioButtonGazoline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/gazoline" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/distance" />

        <TextView
            android:id="@+id/textViewPerformance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/performance" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="24sp"
            android:ems="10"
            android:hint="@string/_0km"
            android:inputType="numberDecimal"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/performance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/l_100km"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewPrix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/prix_essence" />

    <EditText
        android:id="@+id/prix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:ems="10"
        android:hint="@string/_0_00"
        android:inputType="numberDecimal"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textViewCout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:gravity="center"
        android:text="@string/cout_ess" />

    <TextView
        android:id="@+id/cout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="26dp"
        android:hint="@string/hint_cout" />

    <Button
        android:id="@+id/buttonCalculer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/calculer" />

</LinearLayout>